--- a/JAVASCRIPT_course/10_Advanced_JS/GoogleKeepCloneProject/style.css
+++ b/JAVASCRIPT_course/10_Advanced_JS/GoogleKeepCloneProject/style.css
@@ -33,7 +33,6 @@ body{
 }
 
 /*button style start*/
-
 .btn-div {
     position: fixed;
     top: 5rem;
@@ -62,8 +61,8 @@ button.learn-more{
     width: 12rem;
     height: auto;
 }
-button.learn-more .circle{
-    transform: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+button.learn-more .circle {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
     position: relative;
     display: block;
     margin: 0;
@@ -72,25 +71,25 @@ button.learn-more .circle{
     background: #f1c12e;
     border-radius: 1.625rem;
 }
-button.learn-more .circle .icon{
-    transform: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+button.learn-more .circle .icon {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
     position: absolute;
     top: 0;
     bottom: 0; 
     margin: auto;
     background: #fff; 
 }
-button.learn-more .circle .icon.arrow{
-    transform: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+button.learn-more .circle .icon.arrow {
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
     left: 0.625rem;
     width: 1.625rem;
-    height: 0.625rem;
+    height: 0.125rem;
     background: none;
 }
-button.learn-more .circle .icon.arrow::before{
+button.learn-more .circle .icon.arrow::before {
     position: absolute;
     content: "";
-    top: -0.125rem;
+    top: -0.25rem;
     right: 0.0625rem;
     width: 0.625rem;
     height: 0.625rem;
@@ -99,7 +98,7 @@ button.learn-more .circle .icon.arrow::before{
     transform: rotate(45deg);
 }
 button.learn-more .button-text {
-    transform: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
     position: absolute;
     top: 0;
     bottom: 0;
@@ -123,9 +122,6 @@ button:hover .circle .icon.arrow {
 button:hover .button-text{
     color: #fff;
 }
-
-
-
 /*button style end*/
 
 .note{
