--- a/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/style.css
+++ b/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/style.css
@@ -49,7 +49,7 @@ body {
     margin-bottom: 5px;
 }
 
-.form-control imput{
+.form-control input{
     width: 100%;
     border: 2px solid #f0f0f0;
     border-radius: 5px;
