--- a/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/style.css
+++ b/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/style.css
@@ -27,7 +27,7 @@ body {
 
 .container{
     width: calc(100vw - 65vw);
-    max-width: 100%
+    max-width: 100%;
     background-color: #232f3e;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
