--- a/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/style.css
+++ b/JAVASCRIPT_course/10_Advanced_JS/RegstrationForm/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 .header h2{
-    color: #222;
+    color: #fff;
     font-size: 24px;
     font-family: var(--my-btn-font);
     text-align: center;
