--- a/Node.JS_Course/12_ExpressJStemplateEngine/template/index.hbs
+++ b/Node.JS_Course/12_ExpressJStemplateEngine/template/index.hbs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>{{title}}</title>
 </head>
 <body>
     <h1>This page is served using Express but we are updating it using Template engine & hello {{user}}</h1>
