Expess Weather APP with routing + API

--- a/Node.JS_Course/PROJECTS/ExpressWeb/public/css/style.css
+++ b/Node.JS_Course/PROJECTS/ExpressWeb/public/css/style.css
@@ -1,3 +1,36 @@
-h1 {
-    color:burlywood;
+
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;900&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Outfit', sans-serif;
+}
+
+:root{
+    --main-bg : #1e272e;
+    --main-color: #0097e6;
+}
+
+html{
+    font-size: 62.5%;
+}
+
+.row{
+    margin: 0;
+}
+
+.main_menu{
+    background-color: var(--main-bg);
+}
+.navbar{
+    color: #fff;
+    background-color: var(--main-bg);
+    padding: 2rem 0;
+}
+
+.navbar a{
+    color: #fff;
+    font-size: 1.8rem;
 }
