--- a/Node.JS_Course/PROJECTS/ExpressWeb/public/css/style.css
+++ b/Node.JS_Course/PROJECTS/ExpressWeb/public/css/style.css
@@ -17,6 +17,11 @@ html{
     font-size: 62.5%;
 }
 
+body{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 .row{
     margin: 0;
 }
@@ -29,8 +34,98 @@ html{
     background-color: var(--main-bg);
     padding: 2rem 0;
 }
-
+.navbar a:hover{
+    color: var(--main-color);
+}
+.navbar li{
+    margin-left: 2rem;
+}
 .navbar a{
     color: #fff;
     font-size: 1.8rem;
 }
+
+.fa-snowflake{
+    transform: all linear;
+    animation: rot 2s linear infinite;
+    color: var(--main-color);
+}
+
+@keyframes rot{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+
+/* main-header */
+.main_header_left{
+height: 70rem;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+}
+.main_header_left p {
+    font-size: 2rem;
+}
+.main_header_left h1 {
+    font-size: 4rem;
+    margin: 1rem 0 4rem 0;
+    text-transform: capitalize;
+}
+.main_header_left .text_clr{
+    color: var(--main-color);
+}
+.main_header_left button{
+    border: none;
+    padding: 0.8rem 1.8rem;
+    font-size: 1.4rem;
+    border-radius: 2rem;
+    text-transform: uppercase;
+    box-shadow: 0 8px 6px -6px #000;
+    outline: none;
+}
+.main_header_left button:hover{
+    box-shadow: 0 8px 6px -6px var(--main-color);
+
+}
+.main_header_right{
+    height: 70rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    }
+
+
+    /* footer code */
+    footer{
+        width: 100%;
+        background-color: var(--main-bg);
+margin-top: auto;
+    }
+
+    footer p{
+        margin: 0;
+        text-align: center;
+        color: #fff;
+        line-height: normal;
+        font-size: 1.4rem;
+    }
+
+    /* reponsive code */
+    @media(max-width:768px){
+        .main_header_left{
+            height: auto;
+            margin: 5rem 0;
+
+        }
+        .main_header_right{
+            height: auto;
+            margin-top: 3rem;
+            
+        }
+    }
