--- a/Node.JS_Course/PROJECTS/ExpressWeb/public/css/style.css
+++ b/Node.JS_Course/PROJECTS/ExpressWeb/public/css/style.css
@@ -100,6 +100,10 @@ align-items: flex-start;
     align-items: flex-start;
     }
 
+    .errimg img{
+        width: 60rem;
+        height: 30rem;
+    }
 
     /* footer code */
     footer{
