--- a/Node.JS_Course/PROJECTS/MErN_loginform/templates/views/register.hbs
+++ b/Node.JS_Course/PROJECTS/MErN_loginform/templates/views/register.hbs
@@ -33,7 +33,7 @@
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                         <h3 class="register-heading">Apply as a Employee</h3>
-                        <form action="/register" method="post">
+                        <form action="/register" method="POST">
                             <div class="row register-form">
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -67,13 +67,7 @@
                                         <input type="email" class="form-control" placeholder="Your Email *" value="" name="email"/>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" minlength="10" maxlength="10" name="txtEmpPhone"
-                                            class="form-control" placeholder="Your Phone *" value="" name="phone"/>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="Enter Your Answer *"
-                                            value="" />
+                                        <input type="text" minlength="10" maxlength="10" class="form-control" placeholder="Your Phone *" value="" name="phone"/>
                                     </div>
                                     <input type="submit" class="btnRegister" value="Register" />
                                 </div>
