--- a/Node.JS_Course/PROJECTS/MErN_loginform/templates/partials/navbar.hbs
+++ b/Node.JS_Course/PROJECTS/MErN_loginform/templates/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Signup Page</a>
     <button
