--- a/Node.JS_Course/PROJECTS/MErN_loginform/templates/views/register.hbs
+++ b/Node.JS_Course/PROJECTS/MErN_loginform/templates/views/register.hbs
@@ -16,8 +16,7 @@
         <div class="row">
             <div class="col-md-3 register-left">
                 <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt="" />
-                <h3>Welcome</h3>
-                <input type="submit" name="" value="Login" /><br />
+                <h3>Welcome for Registration</h3>
             </div>
             <div class="col-md-9 register-right">
                 <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
@@ -32,7 +31,7 @@
                 </ul>
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                        <h3 class="register-heading">Apply as a Employee</h3>
+                        <h3 class="register-heading">Register as a Employee</h3>
                         <form action="/register" method="POST">
                             <div class="row register-form">
                                 <div class="col-md-6">
