--- a/Laravel/MyFirstProject/public/css/style.css
+++ b/Laravel/MyFirstProject/public/css/style.css
@@ -1,3 +1,7 @@
+h1{
+    text-align: center;
+    margin-top: 2rem;
+}
 .register{
     background: -webkit-linear-gradient(left, #3931af, #00c6ff);
     margin-top: 3%;
