logout using token removal returns error

--- a/Node.JS_Course/PROJECTS/MErN_loginform/templates/views/home.hbs
+++ b/Node.JS_Course/PROJECTS/MErN_loginform/templates/views/home.hbs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {{>header}}
     <title>Document</title>
     <style>
 /*Bad! But hey it works in a pinch*/
@@ -102,6 +103,7 @@ svg {
 </head>
 
 <body>
+{{>navbar}}
 
     <svg width="380px" height="500px" viewBox="0 0 837 1045" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
