--- a/Node.JS_Course/PROJECTS/MErN_loginform/templates/partials/navbar.hbs
+++ b/Node.JS_Course/PROJECTS/MErN_loginform/templates/partials/navbar.hbs
@@ -23,6 +23,10 @@
         <li class="nav-item">
           <a class="nav-link" href="/login">Login</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+
       </ul>
     </div>
   </div>
