--- a/JAVASCRIPT_course/PROJECTS/TypingMaster/style.css
+++ b/JAVASCRIPT_course/PROJECTS/TypingMaster/style.css
@@ -38,7 +38,7 @@ nav ul li {
   width: 100%;
   height: 100vh;
   position: relative;
-  background-image: url("landscape.jpg");
+  background-image: url("/img/landscape.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
