email value from req.body

--- a/Node.JS_Course/PROJECTS/RBACapp/views/register.ejs
+++ b/Node.JS_Course/PROJECTS/RBACapp/views/register.ejs
@@ -36,7 +36,7 @@
                                 d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207" />
                         </svg>
                         <input id="email" class=" pl-2 w-full outline-none border-none" type="email" name="email"
-                            placeholder="Email Address" />
+                            placeholder="Email Address" value="<%= locals.email ? email : '' %> " />
                     </div>
                     <div class="flex items-center border-2 mb-8 py-2 px-3 rounded-2xl ">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400" viewBox="0 0 20 20"
