--- a/Node.JS_Course/PROJECTS/RBACapp/views/layouts/header.ejs
+++ b/Node.JS_Course/PROJECTS/RBACapp/views/layouts/header.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- <link rel="stylesheet" href="../../public/style.css"> -->
-    <title>Document</title>
+    <title>RBAC Application</title>
 </head>
 <body>
 <%- include('./navbar')%>
