--- a/Node.JS_Course/PROJECTS/RBACapp/views/layouts/navbar.ejs
+++ b/Node.JS_Course/PROJECTS/RBACapp/views/layouts/navbar.ejs
@@ -1,7 +1,7 @@
 
 <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
     <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
-        <a href="" class="flex items-center">
+        <a href="/" class="flex items-center">
             <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">RBAC App</span>
         </a>
         <div class="flex items-center lg:order-2">
