--- a/Node.JS_Course/PROJECTS/RBACapp/views/login.ejs
+++ b/Node.JS_Course/PROJECTS/RBACapp/views/login.ejs
@@ -15,8 +15,8 @@
 
             </div>
             <div class="w-full mx-auto px-20 flex-col items-center space-y-6">
-                <h1 class="text-white font-bold text-4xl font-sans">R-B-A-C</h1>
-                <p class="text-white mt-1">The simplest way to power roles in an organization</p>
+                <h1 class="text-white font-bold text-4xl font-sans">Role-Based-Access-Control</h1>
+                <p class="text-white mt-1">The innovative way to power roles in an organization</p>
                 <div class="flex justify-center lg:justify-start mt-6">
                     <a href="/"
                         class="hover:bg-indigo-700 hover:text-white hover:-translate-y-1 transition-all duration-500 bg-white text-indigo-800 mt-4 px-4 py-2 rounded-2xl font-bold mb-2">Get
