getting role from object

--- a/Node.JS_Course/PROJECTS/RBACapp/views/profile.ejs
+++ b/Node.JS_Course/PROJECTS/RBACapp/views/profile.ejs
@@ -38,12 +38,12 @@
     <div>
       <p class="title">Role</p>
       <p class="subtitle">
-        <%= person%>
+        <%= person.role%>
       </p>
     </div>
     <div>
       <p class="title">User Object</p>
-      <p class="subtitle"></p>
+      <p class="subtitle"><%= person %> </p>
     </div>
   </div>
   <%- include('./layouts/footer') %>
