class to keep footer at bottom of screen

--- a/Node.JS_Course/PROJECTS/RBACapp/views/layouts/header.ejs
+++ b/Node.JS_Course/PROJECTS/RBACapp/views/layouts/header.ejs
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="../../public/style.css"> -->
     <title>RBAC Application</title>
 </head>
-<body>
+<body class="flex flex-col h-screen">
 <%- include('./navbar')%>
 <%- include('./flash-message')%>
 
