--- a/Node.JS_Course/PROJECTS/RBACapp/views/layouts/header.ejs
+++ b/Node.JS_Course/PROJECTS/RBACapp/views/layouts/header.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- <link rel="stylesheet" href="../../public/style.css"> -->
+    <link rel="stylesheet" href="../../css/style2.css">
     <title>RBAC Application</title>
 </head>
 <body class="flex flex-col h-screen">
