added talwind through package

--- a/Node.JS_Course/PROJECTS/RBACapp/views/manage-users.ejs
+++ b/Node.JS_Course/PROJECTS/RBACapp/views/manage-users.ejs
@@ -1,5 +1,5 @@
 <%- include('./layouts/header') %>
-    <h1 class="table">Manage users</h1>
+    <h1 class="heading">Manage users</h1>
     <table class="table">
         <thead>
             <th>id</th>
@@ -31,4 +31,6 @@
                 <% }) %>
         </tbody>
     </table>
+
+    
     <%- include('./layouts/footer') %>
