--- a/Node.JS_Course/PROJECTS/RBACapp/views/profile.ejs
+++ b/Node.JS_Course/PROJECTS/RBACapp/views/profile.ejs
@@ -1,5 +1,5 @@
 <%- include('./layouts/header') %>
-  <h1><span class="goback" onclick="window.history.back()"></span>Profile</h1>
+  <h1 class="heading"><span class="goback" onclick="window.history.back()"></span>Profile</h1>
 
   <div class="profile">
     <div>
