--- a/Node.JS_Course/PROJECTS/RBACapp/public/styles/style.css
+++ b/Node.JS_Course/PROJECTS/RBACapp/public/styles/style.css
@@ -541,6 +541,10 @@ video {
 .z-0 {
   z-index: 0;
 }
+.mx-24 {
+  margin-left: 6rem;
+  margin-right: 6rem;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -553,6 +557,9 @@ video {
 }
 .mb-2 {
   margin-bottom: 0.5rem;
+}
+.ml-6 {
+  margin-left: 1.5rem;
 }
 .mt-1 {
   margin-top: 0.25rem;
@@ -640,6 +647,12 @@ video {
 .cursor-pointer {
   cursor: pointer;
 }
+.list-outside {
+  list-style-position: outside;
+}
+.list-disc {
+  list-style-type: disc;
+}
 .flex-col {
   flex-direction: column;
 }
@@ -711,6 +724,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 106 61 / var(--tw-bg-opacity));
 }
+.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(187 247 208 / var(--tw-bg-opacity));
+}
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -767,6 +784,10 @@ video {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
 .px-20 {
   padding-left: 5rem;
   padding-right: 5rem;
@@ -794,6 +815,9 @@ video {
 }
 .text-center {
   text-align: center;
+}
+.text-justify {
+  text-align: justify;
 }
 .font-sans {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
